description of making cloud service

--- a/ideadiary/20221210.md
+++ b/ideadiary/20221210.md
@@ -1,4 +1,4 @@
 *  Using Rasberry Pi instead of IBM Power
 *  connect by webcoket
 *  connect vir local area network
-*  
+*  make cloud service to port and optimize Intel intrinsics to RISC-V or ARM
