--- a/ideadiary/20221210.md
+++ b/ideadiary/20221210.md
@@ -4,4 +4,4 @@
 *  make cloud service to port and optimize Intel intrinsics to RISC-V or ARM
 *  Use Rust instead of C lang for safety
 *  use VM for security and safety(Rasberry pi can run VM)
-*  
+*  run testing framework on Docker
