--- a/ideadiary/20221213.md
+++ b/ideadiary/20221213.md
@@ -1,2 +1,3 @@
 *  make protocol simulator by Python testing framework
 *  run and test protocol implementation by one command
+*  no need for simulation of network itself. it must be abstructed
